--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "farm_girl_test",
+  "name": "farmgirl_task",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "bootstrap": "4.3.1",
+    "bootstrap-datepicker": "^1.9.0",
+    "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "jquery": "^3.5.1",
+    "jquery-ui.1.11.1": "^1.11.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
